[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0004.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0003.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/floorback.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0000.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/wall.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0001.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0002.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0005.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/frontfloor.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0008.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0009.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0010.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0011.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/paws.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0006.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0007.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/conveyor_belt_animation/dog0012.png" type="Texture" id=18]
[ext_resource path="res://assets/fonts/Showcard Gothic Regular.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://scenes/conveyor_belts/MiddleConveyorBelt.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/conveyor_belts/BackConveyorBelt.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/conveyor_belts/FrontConveyorBelt.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/MoneyCounter.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/Clock.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/boxes/BoxArea.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/TrashCan.tscn" type="PackedScene" id=27]
[ext_resource path="res://assets/audio/Spectrum Form.wav" type="AudioStream" id=28]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 19 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 13.0
} ]

[node name="LevelFive" type="Node"]
script = ExtResource( 1 )
level = 5
time_limit = 150
speed = 100
spawn_rate = 1.0
one_star_threshold = 40.0
two_stars_threshold = 60.0
three_stars_threshold = 80.0
include_farmer_cow = true
include_nurse_patient = true
include_zoo_keeper_normal = true
include_knight_king = true
include_cop_criminial = true
include_groom_bride = true
include_karen_manager = true
include_mama_babies = true
include_angel_devil = true
include_honey_pot = true

[node name="Wall" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 6 )

[node name="Instructions" type="Node2D" parent="."]
position = Vector2( 550, 152 )

[node name="LineOne" type="Node2D" parent="Instructions"]
position = Vector2( 0, -30 )

[node name="Label" type="Label" parent="Instructions/LineOne"]
margin_left = -97.6287
margin_top = 12.0376
margin_right = 78.3713
margin_bottom = 45.0376
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.694118, 0.388235, 0.423529, 1 )
text = "Good Luck"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyCounter" parent="." instance=ExtResource( 23 )]
position = Vector2( 640, 360 )

[node name="Floor" type="Node2D" parent="."]
position = Vector2( 640, 360 )

[node name="Back" type="Sprite" parent="Floor"]
texture = ExtResource( 4 )

[node name="Front" type="Sprite" parent="Floor"]
texture = ExtResource( 10 )

[node name="Paws" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 15 )

[node name="Clock" parent="." instance=ExtResource( 24 )]
position = Vector2( 185, 102 )
time_limit = 10.0
pulsating_threshold = 0.75

[node name="TrashCan" parent="." instance=ExtResource( 27 )]
position = Vector2( 215.921, 485.396 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 640, 360 )
z_index = 1
frames = SubResource( 2 )
animation = "run"
frame = 10
playing = true
offset = Vector2( 0, 85 )

[node name="BackConveyorBelt" parent="." instance=ExtResource( 21 )]

[node name="MiddleConveyorBelt" parent="." instance=ExtResource( 20 )]
speed = 150
spawn_rate = 1.25

[node name="FrontConveyorBelt" parent="." instance=ExtResource( 22 )]
speed = 150
spawn_rate = 1.25

[node name="BoxArea" parent="." instance=ExtResource( 26 )]
position = Vector2( 984.61, 604.421 )

[node name="FlyingMoneyContainer" type="Node2D" parent="."]

[node name="FlyingMoneyDestination" type="Node2D" parent="."]
position = Vector2( 1076.35, 62.2263 )

[node name="Player" parent="." instance=ExtResource( 25 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
autoplay = true
